--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,3 +72,37 @@ nav ul li:hover > ul {
 .clear {
     clear: both;
 }
+
+.hero-section { background-image: url(https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=30aa07431100c6ce47826b9ea58d5b16&auto=format&fit=crop&w=1050&q=80);   
+    background-size: cover; 
+    background-position: center; 
+    height: 300px; 
+    width: 100%; 
+    position: relative; 
+    overflow: hidden; 
+}
+
+.slogan {
+    width: 80%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.slogan h2 {
+    color: #ffffff;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+.slogan h2 span {
+    color: #e00986
+}
+
+.yellow-text {
+    font-size: 40px;
+    color: #fbb619;
+}
