Styles added to article

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,3 +106,25 @@ nav ul li:hover > ul {
     font-size: 40px;
     color: #fbb619;
 }
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 10px 20px;
+}
+
+.about-section {
+    width: 100%;
+    background-color: #f29cd9;
+}
+
+.about-section h2 {
+    font-size: 30px;
+    padding: 20px;
+    margin: 0;
+}
+
+.about-section img {
+    margin: 10px auto 30px;
+    display: block;
+}
